fixed loading on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,7 @@ body {
   height: 100%;
   margin: 0;
   overflow: hidden;
+  overflow-x: hidden;
 }
 
 * {
@@ -497,8 +498,8 @@ ul {
 
 .top-menu__list li {
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   padding: 10px 20px;
   cursor: pointer;
   -webkit-transition: all 1s;
@@ -603,6 +604,7 @@ li.active:hover {
  #########################*/
 
 .home {
+  min-height: 100%;
   width: 100%;
   height: 100%;
   display: none;
@@ -720,7 +722,7 @@ li.active:hover {
  #########################*/
 
 .about {
-    min-width: 100%;
+  min-height: 100%;
   display: none;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
@@ -1130,11 +1132,11 @@ svg:hover {
   display: -webkit-box;
   display: -ms-flexbox;
   -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   display: flex;
   letter-spacing: 2px;
 }
@@ -1234,8 +1236,10 @@ svg:hover {
     stroke-dashoffset 0.8s ease 0.5s;
   -o-transition: stroke-dasharray 0.8s ease 0.8s,
     stroke-dashoffset 0.8s ease 0.5s;
-  -webkit-transition: stroke-dasharray 0.8s ease 0.8s, stroke-dashoffset 0.8s ease 0.5s;
-  -o-transition: stroke-dasharray 0.8s ease 0.8s, stroke-dashoffset 0.8s ease 0.5s;
+  -webkit-transition: stroke-dasharray 0.8s ease 0.8s,
+    stroke-dashoffset 0.8s ease 0.5s;
+  -o-transition: stroke-dasharray 0.8s ease 0.8s,
+    stroke-dashoffset 0.8s ease 0.5s;
   transition: stroke-dasharray 0.8s ease 0.8s, stroke-dashoffset 0.8s ease 0.5s;
 }
 
@@ -1267,8 +1271,8 @@ svg:hover {
     stroke 0.3s ease 0.6s;
   -webkit-transition: stroke-dasharray 0.6s ease 0s,
     stroke-dashoffset 0.8s ease 0.3s, stroke 0.3s ease 0.6s;
-  -webkit-transition: stroke-dasharray 0.6s ease 0s, stroke-dashoffset 0.8s ease 0.3s,
-    stroke 0.3s ease 0.6s;
+  -webkit-transition: stroke-dasharray 0.6s ease 0s,
+    stroke-dashoffset 0.8s ease 0.3s, stroke 0.3s ease 0.6s;
   transition: stroke-dasharray 0.6s ease 0s, stroke-dashoffset 0.8s ease 0.3s,
     stroke 0.3s ease 0.6s;
 }
